@@ -28,40 +28,63 @@ import org.apache.spark.HashPartitioner
 * Add some comments for test
 */
 object RecOutput {
-  // program id, start time, finish time.
+  // program id, channel id, start time. 
   type RoviType = (String, (String, Long))
   // duid, program id, rating.
-  type RecType = (Int, String, Double)
+  type RecType = (Int, (String, Double))
   // duid, programs. 
   type OutputType = (Int, Seq[(String, String, Long, Double)]) 
+  
+  type JoinedType = (String, ((Int, Double), (String, Long)))
 
   var sc: SparkContext = null
 
   def main(args: Array[String]) {
-    val date = "20140901"
-    val roviPath = s"hdfs://gnosis-01-01-01.crl.samsung.com/apps/vddil/rovi_hq/${date}/schedule.txt.gz"
-    val currentHour = "201409011000"
-    val hadoopPath = "hdfs://gnosis-01-01-01.crl.samsung.com/apps/data/vddil/rec-output/"
-    val programMapPath = hadoopPath + "program-map.txt"
-    val programScoresPath = hadoopPath + "program-scores.txt"
-    val outputPath = hadoopPath + "output/" + date
+    val date = "20140804"
+    val roviPath = s"s3://vddil.data.standard/apps/vddil/rovi_hq/${date}/schedule.txt.gz"
+    val currentHour = "201408040100"
+    val inputPath = "s3://vddil.recsys.east/input_list.txt"
+    //val outputPath = "s3://vddil.recsys.east/output/"
+    val currentTime = System.currentTimeMillis()
+    val outputPath = s"hdfs:///output-${currentTime}/"
+    val programMapPath = outputPath + "program-map.txt"
     val appName = "OutputRec"     
     val conf = new SparkConf().setAppName(appName)
+        .set("spark.executor.extraJavaOptions ", "-XX:+PrintGCDetails -XX:+HeapDumpOnOutOfMemoryError")
+        .set("spark.serializer", "org.apache.spark.serializer.KryoSerializer")
+        .set("spark.kryo.registrator", "com.samsung.vddil.recsys.SerializationRegistrator")
+        .set("spark.yarn.executor.memoryOverhead", "768")
+        .set("spark.rdd.compress", "true")
+        .set("spark.storage.memoryFraction", "0.2")
+        .set("spark.core.connection.ack.wait.timeout", "600")
+        .set("spark.akka.frameSize", "50")
+        .set("spark.executor.memory", "30g")
+        .set("spark.shuffle.spill", "true")
+
     sc = new SparkContext(conf)
     val paraSc: SparkContext = null
-
-    //val programMap = loadProgramMap(programMapPath)  
-    //programMap.saveAsTextFile(hadoopPath+"program-map")
-    val programScores = loadProgramScores(programScoresPath)  
-    //programScores.saveAsTextFile(hadoopPath+"program-scores")
-    val K = 1
-    doRecommendation(paraSc, date, roviPath, programScores, outputPath, K)
+    val K = 3
+    val programScorePaths = sc.textFile(inputPath).collect
+    doRecommendation(paraSc, date, roviPath, inputPath, programScorePaths, K)
   }
 
+  // load rdd from a list of block files.
+  def loadProgramScores(paraSc: SparkContext, programScorePaths: List[String]) = {
+    //println(programScorePaths.mkString("\n"))
+    var programScores: RDD[RecType] = paraSc.objectFile[RecType](programScorePaths(0))
+    val dirNum = programScorePaths.size
+    // last index of the input score files.
+    for (idx <- 1 until dirNum) {
+      val programScorePath = programScorePaths(idx)
+      programScores = programScores.union(paraSc.objectFile[RecType](programScorePath))
+    }
+    programScores
+  }
   // the main function to do recommendation. called from other classes.
   def doRecommendation(paraSc: SparkContext, date: String, roviPath: String, 
-                       programScores: RDD[RecType], outputPath: String, K: Int) {
-    sc = paraSc
+                       programScorePaths: List[String], outputPath: String, K: Int) {
+    //sc = paraSc
+    val programScores = loadProgramScores(paraSc, programScorePaths)
     val startHourString = date + "0000"
     val startHour = timestampToUTCUnixTime(startHourString)
     for (i <- 0 until 24) {
@@ -79,12 +102,6 @@ object RecOutput {
     return programMap
   }
 
-  // load the scores that a duid rates a program from hdfs files.
-  def loadProgramScores(path: String): RDD[(Int, String, Double)] = {
-    val programScores = sc.textFile(path).map(_.split("\t"))
-                          .map(data => (data(0).toInt, data(1), data(2).toDouble))
-    return programScores
-  }
 
   def recommend(roviPath: String, currentHour: Long, 
                 programScores: RDD[RecType], outputPath: String, K: Int) {
@@ -114,17 +131,69 @@ object RecOutput {
                                              => isValidProgram(currentHour, startTime)}
     return filteredRoviData 
   }
+
+  // load rovi data as a hash map. 
+  def loadRoviDataAsMap(roviPath: String, currentHour: Long): scala.collection.Map[String, (String, Long)] = {
+    val filteredRoviData = loadRoviData(roviPath, currentHour)
+    val roviMap = filteredRoviData.collectAsMap()
+    return roviMap
+  }
+
+  def saveRddAsBlocks(
+    dataset: RDD[JoinedType], 
+    blockNum: Int, 
+    blockFilePath: String): Array[String] =  {
+    val partitionedRDD = dataset.repartition(blockNum)
+    val blockSize      = partitionedRDD.partitions.size
+    val blockFiles     = new Array[String](blockSize) 
+        
+        
+    for ((dataBlock, blockId) <- dataset.partitions.zipWithIndex){
+      val idx = dataBlock.index
+      val blockRDD = partitionedRDD.mapPartitionsWithIndex(
+                    (ind, x) => if (ind == idx) x else Iterator(), true)
+            val blockFile = s"${blockFilePath}/block${idx}" 
+            //be sure to check if file exists or not. 
+            blockFiles(blockId) = blockFile 
+            blockRDD.saveAsObjectFile(blockFile)
+        }
+        
+        blockFiles
+  }
+
+  def loadBlocksAsRdd(blockFiles: Array[String]): RDD[JoinedType]  = {
+    val fileNum = blockFiles.size
+    assert(fileNum != 0)
+    var rdd = sc.objectFile[JoinedType](blockFiles(0))
+    for (i <- 1 until fileNum) {
+      val block = sc.objectFile[JoinedType](blockFiles(i))
+      rdd = rdd.union(block)
+    }
+    return rdd
+  }
   
-  // keeo only programs that will be shown a certain portion within this hour. 
+  // keep only programs that will be shown a certain portion within this hour. 
   def getRec(programScores: RDD[RecType], 
              roviData: RDD[RoviType], K: Int): RDD[OutputType] = {
-    val partitionedProgramScores = programScores.map{case(duid, program, score)
-                                                    => (program, (duid, score))}
-                                               .partitionBy(new HashPartitioner(50)).persist
-    val joinedRec = partitionedProgramScores.join(roviData) //probably repartition. 
+    val roviMap = roviData.collectAsMap()
+    val partitionedProgramScores = programScores.map{case(duid, (program, score))
+                                                      => (program, (duid, score))}
+                                                .filter{case(program, (duid, score))
+                                                          => roviMap.contains(program)}  
+                                                //.repartition(400)
+                                                //.partitionBy(new HashPartitioner(400)).persist()
+    val joinedRec = partitionedProgramScores.map{case(program, (duid, score))
+                                                   => (program, ((duid, score), roviMap(program)))}          
+    val blockFilePath = "hdfs:///output.blocks/" 
+    val wholeFilePath = "hdfs:///output.whole/"
+    val blockNum = 400
+    //joinedRec.saveAsObjectFile(wholeFilePath)
+    //val loadedJoinedRec = sc.objectFile[JoinedType](wholeFilePath)
+    //val blockFiles = saveRddAsBlocks(joinedRec, blockNum, blockFilePath)
+    //val loadedJoinedRec = loadBlocksAsRdd(blockFiles)
     val groupedRec = joinedRec.map{case(program, ((duid, score), (channel, startTime))) 
-                                     => (duid, (program, channel, startTime, score))}
-                              .groupByKey() 
+                                     => (duid, Set((program, channel, startTime, score)))}
+                              .reduceByKey((a, b) => a.union(b)) 
     val topPrograms = groupedRec.map{case(duid, programList) 
                                        => (duid, selectTopPrograms(programList.toSeq, K))}
     return topPrograms
@@ -137,11 +206,6 @@ object RecOutput {
                                             => result.sortBy(_._3).head}
                                      .toSeq.sortWith((u ,v) => u._4 > v._4).take(K)
     return groupedPrograms
-  }
-
-  // output recommendation result.
-  def outputRec(rec: RDD[OutputType], path: String) {
-    rec.saveAsTextFile(path)
   }
 
   // whether the program will be shown within this hour.
